# swagger.yaml
@@ -1,65 +1,113 @@
 openapi: 3.0.0
 info:
-  title: Simple Online Store API
-  description: This is a simple API for an online store that ensures products are not oversold.
+  title: API Простого Інтернет-Магазину
   version: 1.0.0
+  description: Це просте API для інтернет-магазину, яке дозволяє користувачам переглядати товари та робити замовлення.
+
 servers:
-  - url: http://localhost:5000/api/v1
+  - url: 'http://localhost:5000/api'
+    description: Сервер розробки
+
 paths:
   /products:
     get:
-      summary: List all products
+      summary: Перелік усіх товарів
       operationId: listProducts
       responses:
         '200':
-          description: A list of products
+          description: Масив товарів
           content:
             application/json:
               schema:
-                type: array
-                items:
-                  $ref: '#/components/schemas/Product'
+                $ref: '#/components/schemas/ProductArray'
+        '400':
+          description: Масив товірів не зайдено
+    post:
+      summary: Створення товару
+      operationId: createProduct
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/Product'
+      responses:
+        '201':
+          description: Товар створено
+        '404':
+          description: Товар не створено
+
+
   /products/{productId}:
     get:
-      summary: Get a product by ID
+      summary: Отримати товар за його ідентифікатором
       operationId: getProductById
       parameters:
         - name: productId
           in: path
           required: true
           schema:
-            type: integer
-            format: int64
+            type: string
       responses:
         '200':
-          description: A single product
+          description: Об'єкт товару
           content:
             application/json:
               schema:
                 $ref: '#/components/schemas/Product'
         '404':
-          description: Product not found
-  /order:
+          description: Товар не знайдено
+    put:
+      summary: Оновлення товару
+      operationId: updateProduct
+      parameters:
+        - name: productId
+          in: path
+          required: true
+          schema:
+            type: string
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/Product'
+      responses:
+        '200':
+          description: Товар оновлено
+        '404':
+          description: Товар не знайдено
+    delete:
+      summary: Видалення товару
+      operationId: deleteProduct
+      parameters:
+        - name: productId
+          in: path
+          required: true
+          schema:
+            type: string
+      responses:
+        '200':
+          description: Товар видалено
+        '404':
+          description: Товар не знайдено
+
+  /orders:
     post:
-      summary: Create a new order
+      summary: Створення замовлення
       operationId: createOrder
       requestBody:
         required: true
         content:
           application/json:
             schema:
-              $ref: '#/components/schemas/OrderRequest'
+              $ref: '#/components/schemas/Order'
       responses:
         '201':
-          description: Order created
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/Order'
+          description: Замовлення створено
         '400':
-          description: Invalid order data
-        '409':
-          description: Not enough products in stock
+          description: Недійсне замовлення
+
 components:
   schemas:
     Product:
@@ -68,60 +116,33 @@ components:
         - id
         - name
         - price
-        - quantityInStock
+        - stock
       properties:
         id:
-          type: integer
-          format: int64
+          type: string
+          description: Унікальний ідентифікатор товару
         name:
           type: string
+          description: Назва товару
         price:
           type: number
-          format: float
-        quantityInStock:
+          description: Ціна товару
+        stock:
           type: integer
-          format: int32
-    OrderRequest:
-      type: object
-      required:
-        - userId
-        - products
-      properties:
-        userId:
-          type: integer
-          format: int64
-        products:
-          type: array
-          items:
-            type: object
-            required:
-              - productId
-              - quantity
-            properties:
-              productId:
-                type: integer
-                format: int64
-              quantity:
-                type: integer
-                format: int32
+          description: Кількість товару на складі
+    ProductArray:
+      type: array
+      items:
+        $ref: '#/components/schemas/Product'
     Order:
       type: object
       required:
-        - id
-        - userId
-        - date
-        - products
+        - productId
+        - quantity
       properties:
-        id:
-          type: integer
-          format: int64
-        userId:
-          type: integer
-          format: int64
-        date:
+        productId:
           type: string
-          format: date-time
-        products:
-          type: array
-          items:
-            $ref: '#/components/schemas/Product'
+          description: Унікальний ідентифікатор товару
+        quantity:
+          type: integer
+          description: Кількість товару в замовленні
